# P7_UTRY_Py

./: Andy test.py  Andy.py  DatasetStandardDiviation.py  Gucci test.py  Gucci.py  Gucci_Deployment.py  Gucci_Deployment_Test.py  Gucci_Fix_Test.py  Gucci_Main.py  Gucci_Test.py  README.md  Test.py  final_imputer.pkl  final_scaler.pkl  size_chart.csv  transformer.pkl
Data/: final_output.json  input_for_imputation.json  output_measurements.json
Data/Participant 1/: final_output.json  input_for_imputation.json
Data/Participant 10/: final_output.json  input_for_imputation.json
Data/Participant 11/: final_output.json  input_for_imputation.json
Data/Participant 12/: final_output.json  input_for_imputation.json
Data/Participant 13/: final_output.json  input_for_imputation.json
Data/Participant 14/: final_output.json  input_for_imputation.json
Data/Participant 15/: final_output.json  input_for_imputation.json
Data/Participant 16/: final_output.json  input_for_imputation.json
Data/Participant 17_part1/: final_output.json  input_for_imputation.json
Data/Participant 17_part2/: final_output.json  input_for_imputation.json
Data/Participant 18/: final_output.json  input_for_imputation.json
Data/Participant 19/: final_output.json  input_for_imputation.json
Data/Participant 2/: final_output.json  input_for_imputation.json
Data/Participant 20/: final_output.json  input_for_imputation.json
Data/Participant 3/: final_output.json  input_for_imputation.json
Data/Participant 4/: final_output.json  input_for_imputation.json
Data/Participant 5/: final_output.json  input_for_imputation.json
Measurements Calculation/: Body_measurements.py  Datasæt_downloader.py  Preprocessing.py  Requirement.txt  Train_Sizes_Pytorch.py  perimeter_profile.csv
Measurements_Calculation/: Body_measurements.py  Preprocessing.py
Measurements_Calculation/body_measure/: README.md  measurements.csv  ml312_old.yml  pyproject.toml
Measurements_Calculation/body_measure/debug_single/: Lukas_190cm_results.json  Measurement_results.json  results.json
Measurements_Calculation/body_measure/debug_single/debug_single/: results.json
Measurements_Calculation/body_measure/profiles/: studio_A.json
Measurements_Calculation/body_measure/src/body_measure/: calibrate.py  cli.py  geometry.py  measure.py  measure_v2.py  pose.py  pose_kp.py  segmenter.py
Measurements_Calculation/body_measure/src/body_measure/debug_single/: measurements.json
(+58 files in other folders)
